Deployment-Templates/pythonapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "python-deployment"
  namespace: "default"
spec:
  template:
    metadata:
      name: python-pod
      labels:
        app: myapp
    spec:
      containers:
      - name: my-container
        image: "eu.gcr.io/omar-gcp-project-1/my-reload-counter:1.0"
        ports:
        - containerPort: 6379 
        - containerPort:  8000 
  replicas: 2
  selector:
    matchLabels:
      app: myapp
