Deployment-Templates/redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myredis
  labels:
    name: myredis
spec:
  containers:
  - name: my-container-pod
    image: redis:alpine3.16
    ports:
    - containerPort: 6379
