Deployment-Templates/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  type: ClusterIP
  ports:
  - name: port-backend
    port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    name: myredis
