Deployment-Templates/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-front-devops
spec:
  type: NodePort
  ports:
  - name: port-frontend
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: myapp
