Deployment-Templates/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "my-ingresss"
  namespace: "default"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          service:
            name: "service-front-devops"
            port:
              number: 80
        pathType: "ImplementationSpecific"
status:
  loadBalancer: {}
